syntax = "proto3";

package auth;

option go_package = "go-gin-api/internal/auth/pb";

service AuthService {
  rpc VerifyToken (VerifyRequest) returns (VerifyResponse);
}

message VerifyRequest {
  string token = 1;
}

message VerifyResponse {
  bool valid = 1;
  string message = 2;
}
